--- a/package.json
+++ b/package.json
@@ -14,62 +14,62 @@
     "start": "npm run server"
   },
   "dependencies": {
-    "@angular/common": "2.3.0",
-    "@angular/compiler": "2.3.0",
-    "@angular/compiler-cli": "2.3.0",
-    "@angular/core": "2.3.0",
-    "@angular/forms": "2.3.0",
-    "@angular/http": "2.3.0",
-    "@angular/platform-browser": "2.3.0",
-    "@angular/platform-browser-dynamic": "2.3.0",
-    "@angular/platform-server": "2.3.0",
-    "@angular/router": "3.3.0",
+    "@angular/common": "2.4.6",
+    "@angular/compiler": "2.4.6",
+    "@angular/compiler-cli": "2.4.6",
+    "@angular/core": "2.4.6",
+    "@angular/forms": "2.4.6",
+    "@angular/http": "2.4.6",
+    "@angular/platform-browser": "2.4.6",
+    "@angular/platform-browser-dynamic": "2.4.6",
+    "@angular/platform-server": "2.4.6",
+    "@angular/router": "3.4.6",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.17.1",
-    "ng2-pagination": "^1.0.1",
+    "ng2-pagination": "^2.0.0",
     "pikaday": "^1.5.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-rc.4",
+    "rxjs": "5.1.0",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.0",
-    "@types/node": "^6.0.38",
-    "@types/selenium-webdriver": "2.53.33",
+    "@types/node": "^7.0.5",
+    "@types/selenium-webdriver": "2.53.39",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
-    "awesome-typescript-loader": "^2.2.4",
-    "codelyzer": "1.0.0-beta.3",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "codelyzer": "2.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.10.0",
     "font-awesome-webpack": "0.0.4",
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
-    "istanbul-instrumenter-loader": "^0.2.0",
+    "istanbul-instrumenter-loader": "^1.2.0",
     "json-loader": "^0.5.3",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "node-sass": "^3.4.2",
+    "node-sass": "^4.5.0",
     "null-loader": "0.1.1",
     "postcss-loader": "^1.1.0",
-    "protractor": "^4.0.10",
+    "protractor": "^5.1.0",
     "raw-loader": "0.5.1",
     "rimraf": "^2.5.1",
     "sass-loader": "^4.0.0",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.0",
     "ts-helpers": "^1.1.1",
-    "tslint": "^3.4.0",
-    "tslint-loader": "^2.1.0",
+    "tslint": "^4.4.2",
+    "tslint-loader": "^3.3.0",
     "typedoc": "^0.5.1",
-    "typescript": "2.0.10",
+    "typescript": "2.1.5",
     "url-loader": "^0.5.6",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dashboard": "^0.2.0",
-    "webpack-dev-server": "2.1.0-beta.9"
+    "webpack": "^2.1.0-beta.28",
+    "webpack-dashboard": "^0.3.0",
+    "webpack-dev-server": "2.3.0"
   }
 }
