--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^3.3.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ng2-bootstrap": "^1.3.3",
     "ng2-pagination": "^2.0.0",
     "pikaday": "^1.5.1",
